PR/50712: David Binderman: Fix memory leaks.